# simple-port-scanner-in-rust

./: Cargo.toml  README.md  commons.txt
src/: main.rs
