[package]
name = "port_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
regex = "1.10.2"
once_cell = "1.19"

[dependencies.pnet]
version = "0.34.0"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
incremental = true
codegen-units = 256
debug = true